# sqlforensic

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
examples/: demo_analysis.py
examples/sample_output/: dependency_graph.html  diff_report.md  migration.sql  report.html  report.json  report.md
src/sqlforensic/: __init__.py  __main__.py  cli.py  config.py
src/sqlforensic/analyzers/: __init__.py  dead_code_analyzer.py  dependency_analyzer.py  diff_analyzer.py  index_analyzer.py  relationship_analyzer.py  schema_analyzer.py  security_analyzer.py  size_analyzer.py  sp_analyzer.py
src/sqlforensic/connectors/: __init__.py  base.py  postgresql.py  sqlserver.py
src/sqlforensic/diff/: __init__.py  diff_result.py  index_differ.py  migration_generator.py  risk_assessor.py  schema_differ.py  sp_differ.py
src/sqlforensic/parsers/: __init__.py  sp_parser.py
src/sqlforensic/reporters/: __init__.py  console_reporter.py  diff_console_reporter.py  diff_html_reporter.py  html_reporter.py  json_reporter.py  markdown_reporter.py
src/sqlforensic/reporters/templates/: dependency_graph.html  diff_report.html  report.html
src/sqlforensic/reporters/templates/assets/: graph.js  style.css
src/sqlforensic/scoring/: __init__.py  health_score.py  risk_scorer.py
src/sqlforensic/utils/: __init__.py  formatting.py  sql_patterns.py
tests/: conftest.py  test_cli.py  test_config.py  test_connector_base.py  test_console_reporter.py  test_dead_code_analyzer.py  test_dependency_analyzer.py  test_diff_cli.py  test_edge_cases.py  test_formatting.py  test_health_score.py  test_html_reporter.py  test_index_analyzer.py  test_json_reporter.py  test_markdown_reporter.py  test_migration_generator.py  test_relationship_analyzer.py  test_risk_assessor.py  test_risk_scorer.py  test_schema_analyzer.py  test_schema_differ.py  test_security_analyzer.py  test_size_analyzer.py  test_sp_analyzer.py  test_sp_differ.py  test_sp_parser.py  test_sql_patterns.py
