[metadata]
name = sqlforensic
version = attr: sqlforensic.__version__
description = Database forensics and analysis toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Mehmet Can Diri
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Database
    Topic :: Software Development :: Quality Assurance

[options]
python_requires = >=3.10

[tool:pytest]
testpaths = tests

[mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
